@@ -25,17 +25,17 @@ lib_LTLIBRARIES = libgconf-2.la
 
 bin_PROGRAMS = gconfd-2 gconftool-2
 
-CORBA_SOURCES = GConf-common.c GConf-skels.c GConf-stubs.c GConf.h
+CORBA_SOURCECODE = GConf-common.c GConf-skels.c GConf-stubs.c GConf.h
 
 ## not BUILT_SOURCES which seems to make a mess. fix with automake 1.5?
-built_sourcecode = 		\
-	$(CORBA_SOURCES)	\
-	gconf-enum-types.h	\
-	gconf-enum-types.c	\
-	gconfmarshal.h		\
+built_sourcecode = 			\
+	$(CORBA_SOURCECODE)		\
+	gconf-enum-types.h		\
+	gconf-enum-types.c		\
+	gconfmarshal.h			\
 	gconfmarshal.c
 
-$(OBJECTS) $(libgconf_2_la_OBJECTS) $(gconftool_2_OBJECTS) $(gconfd_2_OBJECTS): $(built_sourcecode)
+## $(OBJECTS) $(libgconf_2_la_OBJECTS) $(gconftool_2_OBJECTS) $(gconfd_2_OBJECTS): $(built_sourcecode)
 
 CLEANFILES = \
 	$(built_sourcecode)	\
@@ -85,7 +85,7 @@ gconftool_2_SOURCES = \
 
 gconftool_2_LDADD = $(EFENCE) $(INTLLIBS) $(DEPENDENT_WITH_XML_LIBS) $(POPT_LIBS) libgconf-$(MAJOR_VERSION).la
 
-$(CORBA_SOURCES): $(srcdir)/GConf.idl $(ORBIT_IDL)
+$(CORBA_SOURCECODE): $(srcdir)/GConf.idl $(ORBIT_IDL)
 	$(ORBIT_IDL) $(srcdir)/GConf.idl
 
 libgconf_2_la_SOURCES = \
@@ -104,7 +104,7 @@ libgconf_2_la_SOURCES = \
 	gconf.c			\
 	gconf-client.c		\
 	gconf-enum-types.c	\
-	$(CORBA_SOURCES)
+	$(CORBA_SOURCECODE)
 
 libgconf_2_la_LDFLAGS = -version-info $(GCONF_CURRENT):$(GCONF_REVISION):$(GCONF_AGE)
 
@@ -141,31 +141,14 @@ stamp-gconfmarshal.c: @REBUILD@ gconfmarshal.list
 gconf-enum-types.h: s-enum-types-h
 	@true
 
-FIX_ENUM_FILES=sed -e 's/g_conf/gconf/g' -e 's/TYPE_CONF/TYPE/g'
-
 s-enum-types-h: @REBUILD@ $(gconf_headers) Makefile
-	( cd $(srcdir) && glib-mkenums														\
-			--fhead "#ifndef __GCONF_ENUM_TYPES_H__\n#define __GCONF_ENUM_TYPES_H__\n\n#include <glib-object.h>\n\nG_BEGIN_DECLS\n"	\
-			--fprod "/* enumerations from \"@filename@\" */\n"									\
-			--vhead "GType @enum_name@_get_type (void);\n#define GCONF_TYPE_@ENUMSHORT@ (@enum_name@_get_type())\n"			\
-			--ftail "G_END_DECLS\n\n#endif /* __GCONF_ENUM_TYPES_H__ */"								\
-		$(gconf_headers) | $(FIX_ENUM_FILES) ) > tmp-gconf-enum-types.h									\
-	&& (cmp -s tmp-gconf-enum-types.h $(srcdir)/gconf-enum-types.h || cp tmp-gconf-enum-types.h $(srcdir)/gconf-enum-types.h )		\
-	&& rm -f tmp-gconf-enum-types.h														\
+	GCONF_SRCDIR=$(srcdir) $(srcdir)/regenerate-enum-header.sh $(gconf_headers) \
 	&& echo timestamp > $(@F)
 
 gconf-enum-types.c: s-enum-types-c
 	@true
 
 s-enum-types-c: @REBUILD@ $(gconf_headers) Makefile
-	( cd $(srcdir) && glib-mkenums																    \
-			--fhead "#include \"gconf-client.h\""														    \
-			--fprod "\n/* enumerations from \"@filename@\" */"											    \
-			--vhead "GType\n@enum_name@_get_type (void)\n{\n  static GType etype = 0;\n  if (etype == 0) {\n    static const G@Type@Value values[] = {" \
-			--vprod "      { @VALUENAME@, \"@VALUENAME@\", \"@valuenick@\" },"									    \
-			--vtail "      { 0, NULL, NULL }\n    };\n    etype = g_@type@_register_static (\"@EnumName@\", values);\n  }\n  return etype;\n}\n"	    \
-		$(gconf_headers) ) | $(FIX_ENUM_FILES) > tmp-gconf-enum-types.c											    \
-	&& (cmp -s tmp-gconf-enum-types.c $(srcdir)/gconf-enum-types.c || cp tmp-gconf-enum-types.c $(srcdir)/gconf-enum-types.c )				    \
-	&& rm -f tmp-gconf-enum-types.c																    \
+	GCONF_SRCDIR=$(srcdir) $(srcdir)/regenerate-enum-footer.sh $(gconf_headers) \
 	&& echo timestamp > $(@F)
 
