@@ -1,3 +1,9 @@
+2002-02-01  Havoc Pennington  <hp@redhat.com>
+
+	* gconf/Makefile.am: move the complicated enum rules into small
+	shell scripts (regenerate-enum-*.sh), rename CORBA_SOURCES to 
+	CORBA_SOURCECODE
+
 2002-01-28  Michael Meeks  <michael@ximian.com>
 
 	* gconf/gconf-database.c: warning cleans.
